--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -16,15 +16,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
 
 ### libIGL options: choose between header only and compiled static library
 option(LIBIGL_USE_STATIC_LIBRARY "Use LibIGL as static library" OFF)
-if(LIBIGL_USE_STATIC_LIBRARY)
-  add_definitions(-DIGL_STATIC_LIBRARY)
-endif()
-
-### libIGL options: decide if you want the nanogui bar in the viewer
-option(LIBIGL_WITH_VIEWER      "Use Nanogui Viewer" ON)
-if(LIBIGL_WITH_VIEWER)
-  add_definitions(-DIGL_VIEWER_WITH_NANOGUI)
-endif()
+option(LIBIGL_WITH_VIEWER      "Use Viewer Nanogui Bar" ON)
 
 ### libIGL options: choose your dependencies (by default everything is OFF, in this example we need the viewer) ###
 option(LIBIGL_WITH_BBW         "Use BBW"            ON)
@@ -35,22 +27,21 @@ option(LIBIGL_WITH_TETGEN      "Use Tetgen"         ON)
 option(LIBIGL_WITH_TRIANGLE    "Use Triangle"       ON)
 option(LIBIGL_WITH_XML         "Use XML"            ON)
 option(LIBIGL_WITH_LIM         "Use LIM"            ON)
+option(LIBIGL_WITH_BOOLEAN     "Use Cork boolean"   OFF) # This option is not supported yet
+option(LIBIGL_WITH_COMISO      "Use CoMiso"         ON)
 
+### Start to be tested ----
+#option(LIBIGL_WITH_MATLAB      "Use Matlab"         OFF)
+#option(LIBIGL_WITH_MOSEK       "Use MOSEK"          OFF)
+### End   to be tested ----
+
+### libIGL options: decide if you want to use the functionalities that depends on cgal
 option(LIBIGL_WITH_CGAL        "Use CGAL"           ON)
-if(LIBIGL_WITH_CGAL) # Do not remove this line, cgal strange build system fails without it
+if(LIBIGL_WITH_CGAL) # Do not remove or move this block, cgal strange build system fails without it
   find_package(CGAL REQUIRED)
   set(CGAL_DONT_OVERRIDE_CMAKE_FLAGS TRUE CACHE BOOL "CGAL's CMAKE Setup is super annoying ")
   include(${CGAL_USE_FILE})
 endif()
-
-### Still need to be tested ----
-
-option(LIBIGL_WITH_COMISO      "Use CoMiso"         OFF)
-option(LIBIGL_WITH_BOOLEAN     "Use Cork boolean"   OFF)
-#option(LIBIGL_WITH_MATLAB      "Use Matlab"         OFF)
-#option(LIBIGL_WITH_MOSEK       "Use MOSEK"          OFF)
-
-### END TESTING
 
 ### Adding libIGL: choose the path to your local copy libIGL ###
 ### This is going to compile everything you requested ###
@@ -62,6 +53,11 @@ message("libIGL libraries: ${LIBIGL_LIBRARIES}")
 message("libIGL extra sources: ${LIBIGL_EXTRA_SOURCES}")
 message("libIGL extra libraries: ${LIBIGL_EXTRA_LIBRARIES}")
 message("libIGL definitions: ${LIBIGL_DEFINITIONS}")
+
+### Prepare the build environment
+
+include_directories(${LIBIGL_INCLUDE_DIRS})
+add_definitions(${LIBIGL_DEFINITIONS})
 
 ### Choose which chapters to compile ###
 option(TUTORIALS_CHAPTER1 "Compile chapter 1" ON)
