travis fixes for comiso
Former-commit-id: da29adeff455027c87194b1253a19ed7b183d5b5

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
             - libglu1-mesa-dev
             - g++-4.8
             - cmake
+            - libblas-dev
+            - liblapack-dev
     #         - binutils
     #         - libx11-dev
     #         - mesa-common-dev
